--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,112 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: #94EBFC;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+/* Header section */
+header {
+  background-color: blue;
   color: white;
+  display: flex;
+  align-items: center;
+  padding: 20px;
+  justify-content: space-between;
+  opacity: 0;
+  transition: opacity 0.3s ease; /* Add a smooth transition effect */
 }
 
-.App-link {
-  color: #61dafb;
+header.show-navbar {
+  opacity: 1;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+header nav {
+  display: flex;
+  align-items: center;
+  position: fixed;
+  z-index: 10;
+}
+
+header nav li {
+  list-style-type: none;
+  margin-right: 10px;
+  padding: 10px;
+  cursor: pointer;
+}
+
+.logo img {
+  width: 50px;
+  height: 50px;
+  border-radius: 10px;
+}
+
+img {
+  object-fit: cover;
+}
+
+.bg-container {
+  position: relative;
+}
+
+.absolute-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.absolute-text h1 {
+  font-size: 5rem;
+  background-color: rgba(100, 148, 237, 0.644);
+}
+
+.bg-container img {
+  width: 100%;
+  height: 90vh;
+}
+
+.card-container {
+  display: flex;
+  width: 80%;
+  margin: auto;
+}
+
+.card {
+  flex-basis: 50%;
+  margin: 10px;
+  line-height: 1.6;
+}
+
+.card img {
+  width: 100%;
+}
+
+.ocean2 {
+  width: 100%;
+  height: auto;
+}
+
+.container-body {
+  background-image: url("../src/images/ocean.jpg");
+  height: 100vh;
+  width: 100vw;
+}
+
+.fish {
+  max-width: 80px; /* Set the maximum width as needed */
+  width: 100%;
+  height: auto;
+  object-fit: contain; /* Maintain the aspect ratio of the image */
+}
+
+.dolphin {
+  max-width: 100px; /* Set the maximum width as needed */
+  width: 100%;
+  height: auto;
+  object-fit: contain; /* Maintain the aspect ratio of the image */
 }
